# my-a2a

./: Cargo.toml  README.md
agents/docs-agent/: Cargo.toml
agents/docs-agent/src/: main.rs
agents/file-agent/: Cargo.toml
agents/file-agent/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
