[package]
name    = "docs-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
a2a-rs  = { workspace = true, features = ["jsonrpc-server"] }
axum    = { workspace = true }
reqwest = { workspace = true }
serde   = { workspace = true }

tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }
async-trait        = { workspace = true }
